--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "less": "2.7.2",
     "less-loader": "4.0.3",
+    "normalize.css": "6.0.0",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
